--- a/package.json
+++ b/package.json
@@ -12,8 +12,16 @@
     "@react-navigation/bottom-tabs": "^5.11.8",
     "@react-navigation/native": "^5.9.3",
     "@react-navigation/stack": "^5.14.3",
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.0",
     "expo": "^40.0.1",
     "expo-status-bar": "~1.0.3",
+    "express": "^4.17.1",
+    "is-empty": "^1.2.0",
+    "jsonwebtoken": "^8.5.1",
+    "mongodb": "^3.6.5",
+    "mongoose": "^5.12.1",
+    "nodemon": "^2.0.7",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
@@ -23,7 +31,8 @@
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "~2.15.2",
-    "react-native-web": "~0.13.12"
+    "react-native-web": "~0.13.12",
+    "validator": "^13.5.2"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
