--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "~2.15.2",
-    "react-native-web": "~0.13.12"
+    "react-native-web": "~0.13.12",
+    "unirest": "^0.6.0"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
