--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "~2.15.2",
     "react-native-web": "~0.13.12",
-    "validator": "^13.5.2"
+    "validator": "^13.5.2",
     "react-paginate": "^7.1.2"
   },
   "devDependencies": {
