--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
+  "jest": {
+    "verbose": true
+  },
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "test": "jest --watchAll --config=jestconfig.json"
   },
   "dependencies": {
     "@react-native-community/checkbox": "^0.5.7",
@@ -40,11 +44,12 @@
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "~2.15.2",
     "react-native-web": "~0.13.12",
-    "validator": "^13.5.2",
-    "react-paginate": "^7.1.2"
+    "react-paginate": "^7.1.2",
+    "validator": "^13.5.2"
   },
   "devDependencies": {
-    "@babel/core": "~7.9.0"
+    "@babel/core": "~7.9.0",
+    "jest": "^26.6.3"
   },
   "private": true
 }
