Added moved filters
Filters where in the home screen as functions. Now they are in their own file and have been unit tested.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "jest": {
-    "verbose": true
+    "verbose": true,
+    "testRegex": "./_test_/.*.js$"
   },
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
