Streamline the tunnelurl

--- a/package.json
+++ b/package.json
@@ -23,18 +23,20 @@
     "body-parser": "^1.19.0",
     "events": "^3.3.0",
     "expo": "^40.0.1",
+    "expo-cli": "^4.4.1",
     "expo-status-bar": "~1.0.3",
     "express": "^4.17.1",
     "http": "0.0.1-security",
     "is-empty": "^1.2.0",
     "jsonwebtoken": "^8.5.1",
     "local-ip-url": "^1.0.3",
+    "localtunnel": "^2.0.1",
     "mongodb": "^3.6.5",
     "mongoose": "^5.12.1",
     "net": "^1.0.2",
     "nodemon": "^2.0.7",
     "os": "^0.1.1",
-    "react": "16.13.1",
+    "react": "^16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
     "react-native-deck-swiper": "^1.5.25",
