--- a/jestconfig.json
+++ b/jestconfig.json
@@ -10,6 +10,11 @@
             "branches": 95,
             "functions": 100,
             "lines": 100
+        },
+        "./common/calls.js": {
+            "branches": 70,
+            "functions": 100,
+            "lines": 100
         }
     }
 }
