--- a/jestconfig.json
+++ b/jestconfig.json
@@ -6,7 +6,12 @@
             "functions": 100,
             "lines": 100
         },
-        "./screens/HomeScreen.js": {
+        "./components/Filters.js": {
+            "branches": 95,
+            "functions": 100,
+            "lines": 100
+        },
+        "./components/ContentGenreToString.js": {
             "branches": 95,
             "functions": 100,
             "lines": 100
