--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "jest": {
     "verbose": true,
-    "testRegex": "./_test_/.*.js$"
+    "preset": "jest-expo",
+    "transformIgnorePatterns": [
+      "node_modules/(?!(jest-)?react-native|react-clone-referenced-element|@react-native-community|expo(nent)?|@expo(nent)?/.*|react-navigation|@react-navigation/.*|@unimodules/.*|unimodules|sentry-expo|native-base|@sentry/.*)"
+    ]
   },
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -10,7 +13,7 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "eject": "expo eject",
-    "test": "jest --watchAll --config=jestconfig.json"
+    "test": "jest"
   },
   "dependencies": {
     "@react-native-community/checkbox": "^0.5.7",
@@ -51,7 +54,9 @@
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
-    "jest": "^26.6.3"
+    "jest": "^26.6.3",
+    "jest-expo": "^41.0.0",
+    "react-test-renderer": "^17.0.2"
   },
   "private": true
 }
