--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "dependencies": {
     "@react-native-community/checkbox": "^0.5.7",
-    "@react-native-community/masked-view": "0.1.10",
+    "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/bottom-tabs": "^5.11.8",
     "@react-navigation/native": "^5.9.3",
     "@react-navigation/stack": "^5.14.3",
@@ -22,7 +22,7 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "events": "^3.3.0",
-    "expo": "^40.0.1",
+    "expo": "^41.0.1",
     "expo-cli": "^4.4.3",
     "expo-status-bar": "~1.0.3",
     "express": "^4.17.1",
@@ -36,22 +36,22 @@
     "ngrok": "^4.0.1",
     "nodemon": "^2.0.7",
     "os": "^0.1.1",
-    "react": "^16.13.1",
-    "react-dom": "16.13.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
-    "react-native-deck-swiper": "^1.5.25",
+    "react-native-deck-swiper": "^2.0.5",
     "react-native-elements": "^3.3.2",
-    "react-native-gesture-handler": "~1.8.0",
+    "react-native-gesture-handler": "^1.10.3",
     "react-native-network-info": "^5.2.1",
-    "react-native-reanimated": "~1.13.0",
-    "react-native-safe-area-context": "3.1.9",
-    "react-native-screens": "~2.15.2",
-    "react-native-web": "~0.13.12",
+    "react-native-reanimated": "^2.1.0",
+    "react-native-safe-area-context": "^3.2.0",
+    "react-native-screens": "^3.1.1",
+    "react-native-web": "^0.16.2",
     "react-paginate": "^7.1.2",
     "validator": "^13.5.2"
   },
   "devDependencies": {
-    "@babel/core": "~7.9.0",
+    "@babel/core": "^7.14.0",
     "jest": "^26.6.3"
   },
   "private": true
